# code-forge

./: Cargo.toml  flake.nix  justfile  package-lock.json
.github/: dependabot.yml
.github/workflows/: ci.yml
templates/: base.html  entities.html  index.html  repositories.html  repository.html
web-frontend/: package-lock.json  package.json  svelte.config.js
web-frontend/src/routes/: +layout.svelte  +page.svelte  Nav.svelte
web-frontend/src/routes/[entity]/: +page.svelte
web-frontend/src/routes/[entity]/[repo]/: +page.svelte  +page.ts
web-server/: Cargo.toml
web-server/src/: entities.rs  frontend.rs  main.rs  repositories.rs  ssh.rs
web-server/src/ssh/: receive_pack.rs  util.rs
