[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
clap = { version = "4.3.19", features = ["derive"] }
git2 = "0.17.2"
serde = { version = "1.0.185", features = ["derive"] }
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "fs"] }
tokio-stream = { version = "0.1.14", features = ["fs"] }
tower-http = { version = "0.4.3", features = ["cors"] }
