[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.38", features = ["derive"] }
git2 = "0.20.2"
serde = { version = "1.0.219", features = ["derive"] }
tera = "1.20.0"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "fs"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
