[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.39", features = ["derive"] }
futures = "0.3.31"
git2 = "0.20.2"
gix = { version = "0.73.0", features = ["parallel"] }
gix-packetline = { version = "0.19.1", features = ["async-io"] }
russh = "0.52.1"
serde = { version = "1.0.223", features = ["derive"] }
tera = "1.20.0"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "fs", "io-util", "macros"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
tokio-util = { version = "0.7.16", features = ["compat"] }
tower-http = { version = "0.4.3", features = ["cors"] }
